css/style.css
@import "normalize.css";

@font-face {
    font-family: "Open Sans";
    src: local("OpenSans-Regular"), url(../fonts/OpenSans-Regular.woff) format("woff"),
    url(../fonts/OpenSans-Regular.woff2) format("woff2");
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: "Open Sans";
    src: local("OpenSans-Bold"), url(../fonts/OpenSans-Bold.woff) format("woff"),
    url(../fonts/OpenSans-Bold.woff) format("woff2");
    font-weight: bold;
    font-style: normal;
    font-display: swap;
}

/*General-styles*/

.page {
    position: relative;
    font-family: "Open Sans", Arial, sans-serif;
    font-weight: normal;
    font-style: normal;
    color: #0f0d0e;
    margin: 0 auto;
}

.max-width {
    max-width: 1660px;
    margin: 0 auto;
}

ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

a {
   text-decoration: none;
}

.link:link, .link:visited {
    color: #0f0d0e;
}

.heading {
    padding: 0;
    margin: 0;
    text-transform: uppercase;
    line-height: 1.821875rem;
    color: #0f0d0e;
}

a .heading:hover {
    color: #b59f5b;
}

.tag, .tag:link, .tag:visited {
    font-size: 0.875rem;
    text-transform: uppercase;
    font-weight: bold;
    color: #b59f5b;
}

.tag:hover {
    border-bottom: 2px #b59f5b solid;
}

.data {
    font-size: 0.75rem !important;
    color: #888888;
}

.button-link {
    font-weight: bold;
    line-height: 2.5rem;
    color: #ffffff;
    background-color: #b59f5b;
}

.button-link:hover, .button-link:focus {
    background-color: #323232;
}

.button {
    outline: 0;
    outline-offset: 0;
    border: 0;
}

.input {
    height: 48px;
    /*min-width: 270px;*/
    /*width: 330px;*/
    outline: 0;
    outline-offset: 0;
    border: 0;
    padding-left: 16px;
    padding-bottom: 4px;
    font-size: 0.8125rem;
    color: rgba(0,0,0,0.54);
    background-color: #f4f7f6;
}

@media screen and (min-width: 1200px) {
    .input {
        width: 270px;
    }
}

input:focus {
    outline: 1px solid #b59f5b;
}

.content-column {
    max-width: 91.66666667%;
    margin: 0 auto;
}

@media screen and (min-width: 1200px) {
    .content-column {
        max-width: 70.48192771%;
        min-width: 1170px;
        margin: 0 auto;
    }
}

@media screen and (min-width: 641px) and (max-width: 1199px) {
    .content-column {
        max-width: 90.63719116%;
    }
}

.p-text {
    font-size: 0.875rem;
    line-height: 1.25rem;
}

@media screen and (min-width: 641px) and (max-width: 1199px) {
    .p-text {
        font-size: 0.9375rem;
        line-height: 1.375rem;
    }
}

@media screen and (min-width: 1200px) {
    .p-text {
        font-size: 0.9375rem;
        line-height: 1.375rem;
    }
}

/*Banner-section*/

.banner-section {
    content: "";
    position: absolute;
    display: none;
    height: 100%;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.6);
    z-index: 100;
}



.banner__toggle {
    display: none;
}

.banner__toggle:checked + .banner-section {
    display: block;
}

.banner__close {
        position: absolute;
        top: -33px;
        right: 1px;
        width: 27px;
        opacity: 60%;
    }

@media screen and (min-width: 1200px) {
    .banner__close {
        position: absolute;
        top: -26px;
        left: 95.9%;
        width: 18px;
        z-index: 999;
    }
}


.banner__close:hover {
    cursor: pointer;
}

.banner__background-close {
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: 101;
}

.banner {
    position: fixed;
    box-sizing: border-box;
    display: flex;
    flex-flow: column;
    height: 546px;
    width: 331px;
    top: 56px;
    left: calc(50% - (331px/2));
    margin: 0 auto;
    background-color: #fff;
    z-index: 102;
    padding: 0 25px 30px 25px;
}

@media screen and (min-width: 1200px) {
    .banner {
        height: 590px;
        width: 390px;
        top: calc(50% - (513px/2));
        left: calc(50% - (390px/2));
        padding: 0 30px 30px 30px;

    }
}

.banner .banner-header {
    padding: 0;
    width: 100%;
    margin: 0;
    height: auto;
}

.banner .banner-header__heading {
    width: 100%;
    text-align: center;
    margin-top: 21px;
    margin-left: 0;
}

@media screen and (min-width: 1200px) {
    .banner .banner-header__heading {
        margin-top: 47px;
        margin-left: 5px;
    }
}

.banner .banner-header ::after {
    margin-top: 3px;
}

@media screen and (min-width: 1200px) {
    .banner .banner-header ::after {
        margin-left: 125px;
        /*margin-bottom: 200px;*/
    }
}


.banner__row :not(.banner__row .button) {
    font-size: 0.81rem;
}

.banner__row {
    display: block;
    margin-top: 24px;
}

.banner__row:nth-child(3) {
    margin-top: 21px;
}

@media screen and (min-width: 1200px) {
    .banner__row {
        margin-top: 24px;
    }
}


.banner__phrase {
    display: inline-block;
    width: 100%;
    margin-bottom: 10px;
    line-height: 1rem;
}

@media screen and (min-width: 1200px) {
    .banner__phrase {
        height: unset;
        margin-bottom: 10px;
    }
}

.banner__phrase:nth-child(1) {
    margin-bottom: 8px;
}

@media screen and (min-width: 1200px) {
    .banner__phrase:nth-child(1) {
        margin-bottom: 8px;
    }
}

.banner__input {
    box-sizing: border-box;
    width: 100%;
    -webkit-appearance: none;
    -moz-appearance: none;
    background-image: url(../svg/form-arrows.svg);
    background-repeat: no-repeat;
    background-position: bottom 15px right 15px;
    background-size: 3.5%;
    margin-bottom: 4px;
    padding: 1px 0 0 19px;
    height: 50px;
}

@media screen and (min-width: 1200px) {
    .banner__input {
        height: 48px;
        background-size: 2.9%;
        background-position: right 13px center;
        margin-bottom: 5px;
    }
}

.radio-item {
    display: inline-block;
    margin-right: 30px;
    margin-bottom: 7px;
}

@media screen and (min-width: 1200px) {
    .radio-item {
        margin-bottom: 0;
    }
}
/* ... */

